# test-k

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  start.sh
.github/: pull_request_template.md
.github/workflows/: cicd-apprunner.yaml  cicd-infra.yaml  tests.yaml
app/: main.py
app/api/: main.py
app/api/routes/: __init__.py  kavak_agent_router.py  utils_router.py  whatsapp_router.py
app/core/: __init__.py  dependencies.py  manager.py
app/core/config/database/: __init__.py  postgres_config.py  vector_config.py
app/core/config/logging/: __init__.py  config.py
app/core/config/settings/: base_config.py  environments.py  kavak_config.py  redis_config.py  types_config.py
app/core/config/tracing/: __init__.py  arize_config.py
app/core/middleware/: llm_usage_context.py
app/core/services/: cag_manager.py  kavak_llm_manager.py  memory_manager.py
app/domain/agent_kavak/: __init__.py  facade.py
app/domain/agent_kavak/workflows/: factory.py  kavak_agent.py  tools.py
app/domain/deterministic_kavak/: __init__.py  events.py  main.py  tools.py  workflow.py
app/domain/prompts/: __init__.py
app/domain/prompts/agent/: __init__.py  system_prompt.py
app/models/: api_schemas.py  chat_interaction.py
app/models/agent/: chat_interaction.py  schemas.py
app/models/persistence/: __init__.py
app/persistence/: chat_context_repository.py
app/persistence/postgres/: chat_context_model.py  chat_context_repository.py
app/persistence/vector/: __init__.py  collection_config.py  qdrant_repository.py
app/repository/postgres/: chat_context_repository.py
app/repository/vector/: __init__.py  qdrant_repository.py
app/utils/: normalize.py
docs/: CNAME  agent-architecture-diagram.md  dataset sample.csv  index.html  init.md  iter-01.md  iter-02.md
documentation/: index.html  infrastructure-diagram.md
scripts/: load_kavak_collections.py
tests/: conftest.py
tests/api/: test_utils_router.py
(+15 files in other folders)
