[project]
name = "test-k"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.4",
    "llama-index>=0.14.10",
    "llama-index-vector-stores-qdrant>=0.9.0",
    "openai>=2.11.0",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.16.2",
    "uvicorn>=0.38.0",
    "sqlalchemy>=2.0.45",
    "asyncpg>=0.31.0",
    "python-decouple>=3.8",
    "mem0ai>=1.0.1",
    "rapidfuzz>=3.14.3",
    "twilio>=9.8.8",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]
